<?xml version="1.0"?>
<package>
  <name>adeye_msgs</name>
  <version>0.0.1</version>
  <description>The adeye_msgs package</description>
  <maintainer email="adeye@md.kth.se">AD-EYE team</maintainer>
  <license>TBD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
